# nedoROS

./: .gitattributes  .gitignore  404.html  LICENSE  Makefile  README.md  index.html  mkdocs.yml  search.html
.dvc/: config
about/: index.html
arduino_firmware/: Makefile
arduino_firmware/firmware/: buzzer.ino  chatthisrpi.ino  firmware.ino  gyro.ino  line.ino  motor.ino  odometr.ino  read_voltage.ino  servo.ino  usiki.ino  velest.ino
arduino_firmware/rpi_ardiuno_node/: serial_utils.py
arduino_firmware/testofservo/: testofservo.ino
docs/: about.md  animation_ducks_lidar.py  animation_goingpos.py  electronic.md  hardware.md  index.md  logic_master.py  low_level.md  manim_serial.py
docs/hardware/: assembly.md  electronic.md  overview.md
docs/script/: script.md
docs/software/: charuco_level.md  duck_classifier.md  low_level.md  nav_level.md  overview.md  (+1 more)
giveinandout/: package.xml  setup.cfg  setup.py
gotopoint/: package.xml
hakaton/: hakaton.ino  line.ino  motor.ino  servo.ino
hardware/: index.html
low_level/: index.html
nav_level/: index.html
regul_servo/: gyro.ino  motor.ino  odometr.ino  regul_servo.ino  sensors.ino  servo.ino  usiki.ino  xandy.ino
ros2_ws/: Makefile
ros2_ws/src/apriltag_pose_detector/: CMakeLists.txt  package.xml
ros2_ws/src/apriltag_pose_detector/src/: apriltag_pose_detector.cpp
rpi_ardiuno_node/: serial_utils.py
rpi_level/: index.html
rpi_ws/: Dockerfile  Makefile
search/: search_index.json
yolo_ws/: Yolo8_test_det.ipynb  Yolo8_training.ipynb  create_yolo_dataset.py  dataset.dvc  yolo_dataset.py
(+100 files in other folders)
